--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,6 +27,16 @@ android {
     }
 }
 
+configurations.all {
+    resolutionStrategy {
+        eachDependency { details ->
+            if (details.requested.group == 'com.android.tools.build.jetifier') {
+                details.useVersion '1.0.0-beta02'
+            }
+        }
+    }
+}
+
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
