--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,7 +39,7 @@ configurations.all {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.0.0'
     implementation 'com.google.android.material:material:1.0.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
@@ -47,6 +47,10 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.0.0'
     kapt "com.android.databinding:compiler:3.1.4"
     implementation 'com.squareup.retrofit2:retrofit:2.4.0'
+
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.3'
+    implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
+    implementation 'io.reactivex.rxjava2:rxkotlin:2.3.0'
 
     implementation 'com.google.dagger:dagger-android:2.18'
     implementation 'com.google.dagger:dagger-android-support:2.18'
