--- a/infra/build.gradle
+++ b/infra/build.gradle
@@ -1,5 +1,12 @@
 apply plugin: 'java-library'
+
 apply plugin: 'kotlin'
 
 dependencies {
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    implementation 'com.squareup.retrofit2:retrofit:2.4.0'
+
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.3'
+    implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
+    implementation 'io.reactivex.rxjava2:rxkotlin:2.3.0'
 }
