--- a/infra/build.gradle
+++ b/infra/build.gradle
@@ -10,6 +10,5 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.5'
 
     api 'io.reactivex.rxjava2:rxjava:2.2.3'
-
-    compileOnly 'javax.inject:javax.inject:1'
+    api 'com.google.dagger:dagger-android:2.18'
 }
