--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,3 +69,8 @@ dependencies {
     androidTestImplementation 'androidx.test:runner:1.1.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0'
 }
+
+androidExtensions {
+    experimental = true
+    features = ["parcelize"]
+}
