--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,8 +52,9 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'android.arch.lifecycle:extensions:1.1.1'
     implementation 'androidx.core:core-ktx:1.0.0'
-    kapt "com.android.databinding:compiler:3.1.4"
-    implementation 'joda-time:joda-time:2.10'
+
+    implementation 'androidx.room:room-rxjava2:2.1.0-alpha01'
+    kapt 'androidx.room:room-compiler:2.1.0-alpha01'
 
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
     implementation 'io.reactivex.rxjava2:rxkotlin:2.3.0'
