--- a/infra/build.gradle
+++ b/infra/build.gradle
@@ -2,8 +2,6 @@ apply plugin: 'java-library'
 
 apply plugin: 'kotlin'
 
-apply plugin: 'kotlin-kapt'
-
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'com.squareup.retrofit2:retrofit:2.4.0'
@@ -11,10 +9,7 @@ dependencies {
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.4.0'
     implementation 'com.google.code.gson:gson:2.8.5'
     api 'joda-time:joda-time:2.10'
-
-    implementation 'androidx.room:room-runtime:2.1.0-alpha01'
-    implementation 'androidx.room:room-rxjava2:2.1.0-alpha01'
-    kapt 'androidx.room:room-compiler:2.1.0-alpha01'
+    api 'androidx.room:room-runtime:2.1.0-alpha01'
 
     api 'io.reactivex.rxjava2:rxjava:2.2.3'
     api 'com.google.dagger:dagger-android:2.18'
