--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,7 +45,7 @@ configurations.all {
 }
 
 dependencies {
-    implementation project(":infra")
+    implementation project(":presentation")
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.0.0'
     implementation 'com.google.android.material:material:1.0.0'
@@ -57,7 +57,6 @@ dependencies {
     kapt 'androidx.room:room-compiler:2.1.0-alpha01'
 
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
-    implementation 'io.reactivex.rxjava2:rxkotlin:2.3.0'
 
     implementation 'com.google.dagger:dagger-android-support:2.18'
     kapt 'com.google.dagger:dagger-android-processor:2.18'
