--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -5,4 +5,6 @@ apply plugin: 'kotlin'
 dependencies {
     implementation project(":infra")
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+
+    implementation 'io.reactivex.rxjava2:rxkotlin:2.3.0'
 }
