--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -3,8 +3,8 @@ apply plugin: 'java-library'
 apply plugin: 'kotlin'
 
 dependencies {
-    implementation project(":infra")
+    api project(":infra")
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 
-    implementation 'io.reactivex.rxjava2:rxkotlin:2.3.0'
+    api 'io.reactivex.rxjava2:rxkotlin:2.3.0'
 }
